--- a/lol-api/src/pages/css/homepage.css
+++ b/lol-api/src/pages/css/homepage.css
@@ -1,22 +1,24 @@
-body{
+body {
     margin: 0;
     padding: 0;
+    cursor: url('../../assets/cursor.png'), pointer;
 }
 
-.homepage{
+.homepage {
     width: 100vw;
     height: 100vh;
 }
 
 .header-homepage {
-    background-color: rgba(0, 0, 0, 0.199);
-    backdrop-filter: blur(4px);
+    background-color: rgba(128, 128, 128, .2);
+    backdrop-filter: blur(15px);
     position: fixed;
     width: 100%;
     height: 50px;
     display: flex;
     align-items: center;
     z-index: 1;
+    box-shadow: 2px 2px 10px rgba(128, 128, 128, .2);
 }
 
 .header-homepage .container-homepage {
@@ -37,61 +39,65 @@ body{
     font-weight: bolder;
 }
 
-.banner-homepage{
+.banner-homepage {
     width: 100%;
-    height: 620px;
-    display: flex;
-    overflow: hidden;
-    justify-content: center;
-}
-
-.text-banner{
+    height: 100vh;
     position: absolute;
-    top: 140px;
-    left: 240px;
-    justify-content: center;
+    left: 0;
+    top: 0;
 }
 
-.banner-homepage video{
+.text-banner {
+    position: relative;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.banner-homepage video {
     object-fit: fill;
     width: 100%;
 }
 
-.image-title-banner{
-    width: 800px;
-    height: 350px;
+.image-title-banner {
+    width: 35%;
+    height: auto;
 }
 
-
-.navbar_a{
+.navbar_a {
     display: flex;
     align-items: center;
     text-decoration: none;
     color: rgb(211, 204, 204);
     height: 45px;
+    transition: all .4s;
+    border-bottom: 1px solid transparent;
 }
 
-.navbar_a:hover{
+.navbar_a:hover {
     border-bottom: 1px solid white;
     color: white;
+    cursor: url('../../assets/cursor.png'), pointer;
 }
 
 
-.navbar-logo img{
+.navbar-logo img {
     width: 25px;
     height: 25px;
 }
 
-.box-teste-z{
+.box-teste-z {
     width: 200px;
     height: 200px;
     background-color: pink;
     border: 1px solid black;
-  }
-  
-  .box-teste-x{
+}
+
+.box-teste-x {
     width: 200px;
     height: 50px;
     background-color: yellow;
     border: 1px solid black;
-  }
+}
