--- a/lol-api/src/App.css
+++ b/lol-api/src/App.css
@@ -26,7 +26,7 @@ body{
   background-color: rgba(0, 0, 0, 0.815);
 }
 
-.banner-homepage{
+.banner-homepage-app{
   width: 90%;
   height: 90%;
   display: flex;
@@ -44,6 +44,7 @@ body{
   justify-content: center;
   align-items: center;
   margin: 1%;
+  margin-top: 4%;
 }
 
 .menu-app{
@@ -55,12 +56,12 @@ body{
 }
 
 .text-menu-app{
-  cursor: pointer;
-  color: white;
-  margin: 1%;
+  color: rgba(255, 255, 255, 0.795);
+  margin: 0;
   font-size: 70px;
   margin-left: 10%;
   font-weight: bolder;
+  letter-spacing: -1px;
 }
 
 .text-menu-app:hover{
@@ -71,54 +72,104 @@ body{
 
 .bi-1{
   position: absolute;
-  background-color: #CB5DF2;
-  border-radius: 2px;
+  background-color: #ca5df2d8;
+  border-radius: 3px;
   width: 400px;
   height: 400px;
-  top: 90px;
-  right: 80px;
+  top: 85px;
+  right: 75px;
   z-index: 1;
   border: 1px solid black;
-  box-shadow: -8px -4px 15px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px -4px 15px 5px rgba(0,0,0,0.5);
 }
 
 .bi-3{
   position: absolute;
-  background-color: #82F0F1;
-  border-radius: 2px;
+  background-color: #62C1DC;
+  border-radius: 3px;
   width: 400px;
   height: 400px;
   top: 110px;
   right: 110px;
   z-index: 2;
   border: 1px solid black;
-  box-shadow: -8px -4px 15px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px -4px 15px 5px rgba(0,0,0,0.5);
 }
 
 .bi-2{
   position: absolute;
   background-color: white;
-  border-radius: 2px;
+  border-radius: 3px;
   width: 400px;
   height: 400px;
-  top: 135px;
-  right: 140px;
+  top: 140px;
+  right: 145px;
   z-index: 3;
   background-color: #272b4c;
-  background-image: url('assets/lol-triangulo-img.png');
-  background-position: center;
-  background-size: 670px;
+  background-image: url('assets/lol-image-jinx-icon.png');
+  background-position: bottom;
+  background-size: cover;
   background-repeat: no-repeat;
   border: 1px solid black;
-  box-shadow: -8px -4px 15px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px -4px 15px 5px rgba(0,0,0,0.5);
 }
 
 .kaisa-img{
   position: absolute;
-  width: 390px;
+  width: 320px;
   height: 390px;
   margin-top: 10px;
+  margin-left: 30px;
 }
+
+.box-teste-z{
+  width: 45%;
+  height: 350px;
+  background-color: pink;
+  margin: 2%;
+  border-radius: 3px;
+  display: flex;
+  background-size: cover;
+  background-position: center;
+  justify-content: flex-end;
+  align-items: flex-end;
+  float: left;
+  box-shadow: 0px -4px 15px 5px rgba(0,0,0,0.5);
+}
+
+.texte-x{
+  color: white;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.555);
+  display: flex;
+  align-items: first baseline;
+  flex-direction: column;
+  padding: 4%;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+
+.title-champion-text p{
+  margin: 2px;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 10%;
+  text-transform: uppercase;
+}
+
+.subtitle-champion-text{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.subtitle-champion-text p{
+  margin: 2px;
+  font-size: 18px;
+  text-transform: lowercase;
+}
+
 
 
 /*.banner-content-text{
@@ -201,7 +252,6 @@ body{
   border-radius: 2px;
   background-color: #CB5DF2;
   color: white;
-  cursor: pointer;
   font-weight: bolder;
 }
 
