--- a/lol-api/src/pages/css/homepage.css
+++ b/lol-api/src/pages/css/homepage.css
@@ -1,11 +1,11 @@
 body {
     margin: 0;
     padding: 0;
-    cursor: url('../../assets/cursor.png'), pointer;
+    cursor: url('../../assets/cursor.png'),pointer;
 }
 
 .homepage {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -73,31 +73,17 @@ body {
     color: rgb(211, 204, 204);
     height: 45px;
     transition: all .4s;
-    border-bottom: 1px solid transparent;
+    border-bottom: 2px solid transparent;
 }
 
 .navbar_a:hover {
-    border-bottom: 1px solid white;
+    border-bottom: 2px solid white;
     color: white;
-    cursor: url('../../assets/cursor.png'), pointer;
+    cursor: url('../../assets/cursor.png');
 }
 
 
 .navbar-logo img {
     width: 25px;
     height: 25px;
-}
-
-.box-teste-z {
-    width: 200px;
-    height: 200px;
-    background-color: pink;
-    border: 1px solid black;
-}
-
-.box-teste-x {
-    width: 200px;
-    height: 50px;
-    background-color: yellow;
-    border: 1px solid black;
 }
