--- a/lol-api/src/pages/css/homepage.css
+++ b/lol-api/src/pages/css/homepage.css
@@ -9,35 +9,6 @@ body {
     height: 100vh;
 }
 
-.header-homepage {
-    background-color: rgba(128, 128, 128, .2);
-    backdrop-filter: blur(15px);
-    position: fixed;
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    z-index: 1;
-    box-shadow: 2px 2px 10px rgba(128, 128, 128, .2);
-}
-
-.header-homepage .container-homepage {
-    display: flex;
-    height: 100%;
-    width: 90%;
-    margin: 0 auto;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.navbar-homepage {
-    display: flex;
-    list-style-type: none;
-    width: 400px;
-    padding: 0;
-    justify-content: space-between;
-    font-weight: bolder;
-}
 
 .banner-homepage {
     width: 100%;
@@ -59,6 +30,7 @@ body {
 .banner-homepage video {
     object-fit: fill;
     width: 100%;
+    box-shadow: 0px 0px 28px -5px rgba(66, 68, 90, 1);
 }
 
 .image-title-banner {
@@ -66,24 +38,7 @@ body {
     height: auto;
 }
 
-.navbar_a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: rgb(211, 204, 204);
-    height: 45px;
-    transition: all .4s;
-    border-bottom: 2px solid transparent;
-}
-
-.navbar_a:hover {
-    border-bottom: 2px solid white;
-    color: white;
-    cursor: url('../../assets/cursor.png');
-}
-
-
-.navbar-logo img {
-    width: 25px;
-    height: 25px;
+.teste-xxxxxx{
+    width: 100%;
+    margin-top: 10%;
 }
