--- a/lol-api/src/App.css
+++ b/lol-api/src/App.css
@@ -60,7 +60,7 @@ body{
   margin: 0;
   font-size: 70px;
   margin-left: 10%;
-  font-weight: bolder;
+  font-weight: 200px;
   letter-spacing: -1px;
 }
 
@@ -106,12 +106,13 @@ body{
   right: 220px;
   z-index: 3;
   background-color: #272b4c;
-  background-image: url('assets/lol-image-jinx-icon.png');
+  /*background-image: url('assets/lol-image-jinx-icon.png');*/
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
   border: 1px solid black;
   box-shadow: 0px -4px 15px 5px rgba(0,0,0,0.5);
+  transition: 3s;
 }
 
 .kaisa-img{
