--- a/lol-api/src/components/css/footer.css
+++ b/lol-api/src/components/css/footer.css
@@ -2,7 +2,7 @@
     margin-top: 10%;
     width: 100%;
     height: 100ch;
-    background-color: rgba(0, 0, 0, 0.938);
+    background-color: rgba(22, 22, 22, 0.938);
     box-shadow: 0px 4px 28px -5px rgba(66, 68, 90, 1);
     color: white;
     display: flex;
@@ -40,38 +40,194 @@
     flex-direction: column;
 }
 
+.border-button-portfolio{
+    width: 225px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+    border: 1px solid rgb(163, 163, 163);
+}
+
+.button-gif-portfolio{
+    border: none;
+    width: 220px;
+    height: 40px;
+    background-color: transparent;
+    backdrop-filter: blur(20px);
+    color: rgb(235, 235, 235);
+    cursor: pointer;
+    font-size: 15px;
+    border-radius: 1px;
+    outline: none;
+}
+
+.button-gif-portfolio:hover{
+    width: 230px;
+    height: 50px;
+    background-color: white;
+    transition: 0.5s;
+    font-size: 17px;
+    color: black;
+}
+
+.header-content-fotter{
+    width: 100%;
+    height: 6%;
+    background-color: #272b4ce3;
+    box-shadow: inset 0px 0px 20px 1px rgba(3, 2, 2, 0.466);
+    display: flex;
+    align-items: center;
+}
+  
+.text-header-content-footer{
+    width: 100%;
+    height: 100%;
+    font-size: 17px;
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+
+.middle-content-footer{
+    width: 100%;
+    height: 11%;
+    display: flex;
+    align-items: center;
+    background-color: rgb(56, 56, 56);
+    box-shadow: 0px 10px 15px 0px rgba(27, 13, 13, 0.74);
+}
+
+.middle-content-footer .footer-container{
+    display: flex;
+    flex-direction: column;
+} 
+
+.bottom-content-footer{
+    width: 100%;
+    height: 13%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.bottom-content-footer .footer-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.image-pessoal-logo-footer img{
+    height: 80px;
+    width: 80px;
+    margin-top: 5px;
+}
+
+.image-me-footer img{
+    margin-top: 5px;
+    height: 75px;
+    width: 75px;
+    border-radius: 40px;
+    box-shadow: 0px 0px 15px 0px rgba(27, 13, 13, 0.74);
+}
+
+.buttons-contact-footer{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .buttons-contact{
+    margin-top: 3%;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.buttons-footer-gif button{
-    width: 300px;
-    height: 50px;
-    background-color: rgba(0, 0, 0, 0.651);
-    border-radius: 3px;
-    color: white;
+.buttons-contact button{
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border-radius: 40px;
     border: none;
     display: flex;
+    justify-content: center;
     align-items: center;
     font-size: 20px;
     cursor: pointer;
-    font-weight: bold;
+    margin-top: 5px;
 }
 
 .icon-button-gif{
-    width: 35px;
-    height: 35px;
-    margin-right: 5px;
+    width: 20px;
+    height: 20px;
 }
 
 .spacing-gif-button{
-    margin-left: 3%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
-.title-buttons-gif{
-    font-size: 60px;
+.navbar-footer {
+    margin-top: 5%;
+    display: flex;
+    list-style-type: none;
+    width: 100%;
+    padding: 0;
+    justify-content: space-evenly;
+    font-weight: bolder;
 }
-  
+
+.navbar_a_footer {
+    display: flex;
+    text-decoration: none;
+    color: rgb(211, 204, 204);
+    height: 20px;
+    transition: all .4s;
+}
+
+
+.navbar_a_footer:hover {
+    color: white;
+    cursor: url('../../assets/cursor.png');
+}
+
+.title-tecnologias{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.title-tecnologias p{
+    margin: 14px 0 20px 0;
+    font-size: 17px;
+}
+
+.images-tecnologias{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin-bottom: 1%;
+}
+
+.icon-tecnologias{
+    width: 35px;
+    height: 35px;
+    margin-left: 3%;
+    margin-right: 2%;
+}
+
+.icon-tecnologias.css{
+    width: 37px;
+    height: 37px;    
+}
+
+.icon-tecnologias.html{
+    width: 30px;
+    height: 30px;
+    margin-top: 4px;
+}
