--- a/lol-api/src/components/css/footer.css
+++ b/lol-api/src/components/css/footer.css
@@ -1,7 +1,7 @@
 .footer{
     margin-top: 10%;
     width: 100%;
-    height: 100ch;
+    height: 600px;
     background-color: rgba(22, 22, 22, 0.938);
     box-shadow: 0px 4px 28px -5px rgba(66, 68, 90, 1);
     color: white;
