--- a/lol-api/src/pages/champions/style.css
+++ b/lol-api/src/pages/champions/style.css
@@ -1,19 +1,20 @@
 .box-teste-z{
     width: 100%;
     height: 350px;
-    background-color: pink;
+    background-color: rgb(77, 77, 77);
     border-radius: 3px;
     display: flex;
     background-size: cover;
     background-position: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: flex-end;
+    flex-direction: column;
     box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.5);
   }
 
   .texte-x{
     color: white;
-    width: 100%;
+    width: 92%;
     background-color: rgba(0, 0, 0, 0.671);
     display: flex;
     flex-direction: column;
@@ -89,5 +90,60 @@
 
 .list-champions{
   width: 100%;
-  height: 100%;
 }
+
+.more-content-button{
+  width: 100%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+}
+
+.informations-champion-button{
+  margin-left: 4%;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  background-color: black;
+  border: 2px solid #CBAB70;
+  color: black;
+  outline: none;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  justify-content: center;
+  box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.5);
+}
+
+
+.informations-champion-button img{
+  filter: invert(100);
+}
+
+.icon-inset-button{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.filter-inset-champion{
+  width: 30px;
+  height: 30px;
+  background-color: #CBAB70;
+  border-radius: 50%;
+}
+
+
+.filter-inset-champion:hover{
+  background-color: #faa405;
+  transition: 0.5s;
+}
+
+.informations-champion-button:hover{
+  border: 2px solid #faa405;
+  transition: 0.5s;
+}
+
