--- a/lol-api/src/components/css/footer.css
+++ b/lol-api/src/components/css/footer.css
@@ -1,7 +1,7 @@
 .footer{
     margin-top: 10%;
     width: 100%;
-    height: 600px;
+    height: 100ch;
     background-color: rgba(22, 22, 22, 0.938);
     box-shadow: 0px 4px 28px -5px rgba(66, 68, 90, 1);
     color: white;
@@ -74,7 +74,6 @@
 
 .header-content-fotter{
     width: 100%;
-    height: 6%;
     background-color: #272b4ce3;
     box-shadow: inset 0px 0px 20px 1px rgba(3, 2, 2, 0.466);
     display: flex;
@@ -92,7 +91,6 @@
 
 .middle-content-footer{
     width: 100%;
-    height: 11%;
     display: flex;
     align-items: center;
     background-color: rgb(56, 56, 56);
@@ -106,7 +104,6 @@
 
 .bottom-content-footer{
     width: 100%;
-    height: 13%;
     display: flex;
     align-items: center;
     justify-content: space-between;
