--- a/lol-api/src/pages/champions/style.css
+++ b/lol-api/src/pages/champions/style.css
@@ -101,8 +101,11 @@
   border-top-left-radius: 3px;
 }
 
-.informations-champion-button{
+.more-content-button a{
   margin-left: 4%;
+}
+
+.informations-champion-button{
   width: 40px;
   height: 40px;
   border-radius: 50%;
