--- a/lol-api/src/components/tabs/styles.css
+++ b/lol-api/src/components/tabs/styles.css
@@ -18,14 +18,14 @@
       background-color: transparent;
       color: rgb(168, 168, 168);
       font-size: 18px;
-      font-weight: bold;
       cursor: pointer;
-      transition: all .4s;
+      transition: all .2s;
     }
 
     .tab-item:hover{
+        font-weight: 500;
         color: white;
-        transition: 0.5s;
+        transition: 0.3s;
     }
   }
   
@@ -42,7 +42,7 @@
 
   .content-character-component::-webkit-scrollbar-thumb{
     border: none;
-    background-color: white;
+    background-color: rgb(207, 207, 207);
     border-radius: 5px;
 }
 
@@ -95,8 +95,9 @@
 }
 
 .icon-back-button{
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
+    margin-top: 2px;
 }
 
 .champions-list-p-text{
