--- a/lol-api/src/pages/css/characterPage.css
+++ b/lol-api/src/pages/css/characterPage.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    cursor: url('../../assets/cursor.png'),pointer;
+    cursor: url('../../assets/cursor.png'), pointer;
 }
 
 .character-page {
@@ -15,7 +15,7 @@ body {
 }
 
 
-.filter-character-page{
+.filter-character-page {
     display: flex;
     align-items: center;
     width: 100%;
@@ -25,7 +25,7 @@ body {
     backdrop-filter: blur(9px);
 }
 
-.info-character{
+.info-character {
     width: 100%;
     height: 95%;
     display: flex;
@@ -35,7 +35,7 @@ body {
     background-color: transparent;
 }
 
-.image-character{
+.image-character {
     width: 100%;
     height: 600px;
     margin: 0 auto;
@@ -46,40 +46,91 @@ body {
     background-position: center;
 }
 
-.info-champions-text{
+.info-champions-text {
     width: 95%;
-    height: 300px;
+    height: 400px;
     margin: 0 auto;
     border: 1px solid rgb(131, 131, 131);
     border-top: none;
-    border-radius: 1px;
+    border-radius: 2px;
     overflow: visible;
     position: relative;
     display: flex;
     justify-content: center;
+    background-color: rgba(0, 0, 0, 0.856);
 }
 
-.teste-champions-character{
-    width: 50%;
+.champions-character-texts {
+    /*backdrop-filter: blur(5px);*/
+    width: 100%;
     height: 200px;
     position: absolute;
-    top: -32%;
+    top: -31%;
     color: white;
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: transparent;
 }
 
-.subtitle-character-page{
+.subtitle-character-page {
     margin: 0;
     font-size: 25px;
     font-weight: bold;
+    width: 100%;
+    text-align: center;
+    margin-top: 1%;
+    text-transform: uppercase;
+    text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.85);
 }
 
 
-.title-character-page{
+.title-character-page {
+    width: 100%;
+    text-align: center;
     margin: 0;
     font-size: 100px;
     font-weight: 400;
     text-transform: uppercase;
+    letter-spacing: 6px;
+    /*text-shadow: 0px 0px 10px rgba(16,16,16,0.7);*/
+    text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.85);
+}
+
+.content-characters-page-description {
+    width: 100%;
+    height: 100;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+}
+
+.character-page-description-type {
+    width: 50%;
+    height: 80%;
+}
+
+.character-page-history {
+    width: 50%;
+    height: 80%;
+    border-left: 1px solid rgb(131, 131, 131);
+}
+
+.character-type-history {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.filter-image-character {
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(0deg,
+            hsl(0deg 0% 2%) 0%,
+            hsla(0, 0%, 71%, 0) 50%,
+            hsla(0, 0%, 100%, 0) 100%);
 }
