--- a/lol-api/src/pages/css/homepage.css
+++ b/lol-api/src/pages/css/homepage.css
@@ -157,6 +157,10 @@ body {
     margin-bottom: 4%;
 }
 
+.content-game-video.akali {
+    margin-bottom: 8%;
+}
+
 .content-game-text.jinx {
     display: flex;
     align-items: center;
@@ -180,7 +184,7 @@ body {
 .filter-img-background-jinx {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.801);
+    background-color: rgba(0, 0, 0, 0.575);
 }
 
 .main-subtitle-text-game.jinx {
