--- a/lol-api/src/components/css/footer.css
+++ b/lol-api/src/components/css/footer.css
@@ -1,4 +1,4 @@
-.footer{
+.footer {
     margin-top: 10%;
     width: 100%;
     height: 100ch;
@@ -18,7 +18,7 @@
     justify-content: center;
 }
 
-.gif-footer{
+.gif-footer {
     width: 100%;
     height: 70%;
     background-image: url('../../assets/gif-footer.gif');
@@ -27,7 +27,7 @@
     align-items: center;
 }
 
-.buttons-footer-gif{
+.buttons-footer-gif {
     margin-right: 2%;
     margin-left: 2%;
     width: 100%;
@@ -40,7 +40,7 @@
     flex-direction: column;
 }
 
-.border-button-portfolio{
+.border-button-portfolio {
     width: 225px;
     height: 45px;
     display: flex;
@@ -50,7 +50,7 @@
     border: 1px solid rgb(163, 163, 163);
 }
 
-.button-gif-portfolio{
+.button-gif-portfolio {
     border: none;
     width: 220px;
     height: 40px;
@@ -63,7 +63,7 @@
     outline: none;
 }
 
-.button-gif-portfolio:hover{
+.button-gif-portfolio:hover {
     width: 230px;
     height: 50px;
     background-color: white;
@@ -72,15 +72,16 @@
     color: black;
 }
 
-.header-content-fotter{
+.header-content-fotter {
     width: 100%;
     background-color: #272b4ce3;
     box-shadow: inset 0px 0px 20px 1px rgba(3, 2, 2, 0.466);
     display: flex;
     align-items: center;
+    padding-top: 15px;
 }
-  
-.text-header-content-footer{
+
+.text-header-content-footer {
     width: 100%;
     height: 100%;
     font-size: 17px;
@@ -89,7 +90,7 @@
     justify-content: center;
 }
 
-.middle-content-footer{
+.middle-content-footer {
     width: 100%;
     display: flex;
     align-items: center;
@@ -97,31 +98,31 @@
     box-shadow: 0px 10px 15px 0px rgba(27, 13, 13, 0.74);
 }
 
-.middle-content-footer .footer-container{
+.middle-content-footer .footer-container {
     display: flex;
     flex-direction: column;
-} 
+}
 
-.bottom-content-footer{
+.bottom-content-footer {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.bottom-content-footer .footer-container{
+.bottom-content-footer .footer-container {
     display: flex;
     justify-content: space-between;
 }
 
 
-.image-pessoal-logo-footer img{
+.image-pessoal-logo-footer img {
     height: 80px;
     width: 80px;
     margin-top: 5px;
 }
 
-.image-me-footer img{
+.image-me-footer img {
     margin-top: 5px;
     height: 75px;
     width: 75px;
@@ -129,14 +130,14 @@
     box-shadow: 0px 0px 15px 0px rgba(27, 13, 13, 0.74);
 }
 
-.buttons-contact-footer{
+.buttons-contact-footer {
     width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.buttons-contact{
+.buttons-contact {
     margin-top: 3%;
     width: 100%;
     display: flex;
@@ -144,7 +145,7 @@
     justify-content: center;
 }
 
-.buttons-contact button{
+.buttons-contact button {
     width: 30px;
     height: 30px;
     background-color: white;
@@ -158,12 +159,12 @@
     margin-top: 5px;
 }
 
-.icon-button-gif{
+.icon-button-gif {
     width: 20px;
     height: 20px;
 }
 
-.spacing-gif-button{
+.spacing-gif-button {
     margin-left: 1%;
     margin-right: 1%;
 }
@@ -192,18 +193,18 @@
     cursor: url('../../assets/cursor.png');
 }
 
-.title-tecnologias{
+.title-tecnologias {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.title-tecnologias p{
+.title-tecnologias p {
     margin: 14px 0 20px 0;
     font-size: 17px;
 }
 
-.images-tecnologias{
+.images-tecnologias {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -211,19 +212,19 @@
     margin-bottom: 1%;
 }
 
-.icon-tecnologias{
+.icon-tecnologias {
     width: 35px;
     height: 35px;
     margin-left: 3%;
     margin-right: 2%;
 }
 
-.icon-tecnologias.css{
+.icon-tecnologias.css {
     width: 37px;
-    height: 37px;    
+    height: 37px;
 }
 
-.icon-tecnologias.html{
+.icon-tecnologias.html {
     width: 30px;
     height: 30px;
     margin-top: 4px;
