--- a/lol-api/src/components/css/menu.css
+++ b/lol-api/src/components/css/menu.css
@@ -1,5 +1,3 @@
-
-
 .header-homepage {
     background-color: rgba(128, 128, 128, .2);
     backdrop-filter: blur(15px);
@@ -30,6 +28,7 @@
     padding: 0;
     justify-content: space-between;
     font-weight: bolder;
+    margin: 0;
 }
 
 .navbar_a {
