--- a/lol-api/src/pages/css/homepage.css
+++ b/lol-api/src/pages/css/homepage.css
@@ -150,6 +150,13 @@ body {
     margin-bottom: 0;
 }
 
+.descrition-text-game.thresh {
+    width: 90%;
+    text-align: center;
+    margin-bottom: 0;
+    margin-bottom: 10px;
+}
+
 .content-game-video.jinx {
     width: 80%;
     height: 300px;
